--- a/package.json
+++ b/package.json
@@ -22,23 +22,27 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.12.0",
     "@ionic-native/facebook": "^4.15.0",
+    "@ionic-native/http": "^4.17.0",
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "~4.12.0",
     "@ionic/pro": "2.0.3",
-    "@ionic/storage": "2.2.0",
+    "@ionic/storage": "^2.2.0",
+    "cordova-android": "7.0.0",
+    "cordova-plugin-advanced-http": "2.0.1",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-facebook4": "^3.0.0",
+    "cordova-plugin-facebook4": "^3.1.0",
+    "cordova-plugin-file": "6.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.1.4",
+    "cordova-plugin-ionic-webview": "^2.2.3",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "2.5.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26",
-    "cordova-android": "~7.0.0"
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.0",
@@ -49,7 +53,8 @@
     "plugins": {
       "cordova-plugin-facebook4": {
         "APP_ID": "506241783179562",
-        "APP_NAME": "HimalayanSherpa"
+        "APP_NAME": "HimalayanSherpa",
+        "FACEBOOK_ANDROID_SDK_VERSION": "4.37.0"
       },
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
@@ -58,7 +63,9 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-advanced-http": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
